Fix setup icon alignment (full width)

--- a/frontend/pages/RegistrationPage/Breadcrumbs/_styles.scss
+++ b/frontend/pages/RegistrationPage/Breadcrumbs/_styles.scss
@@ -81,7 +81,6 @@
         &::after {
           background-color: transparent;
           border: 2px solid $core-white;
-          margin-top: 13px;
         }
       }
 
@@ -119,7 +118,6 @@
         &::after {
           background-color: transparent;
           border: 2px solid $core-white;
-          margin-top: 13px;
         }
       }
 
@@ -160,7 +158,6 @@
         &::after {
           background-color: transparent;
           border: 2px solid $core-white;
-          margin-top: 13px;
         }
       }
 
